[tool.poetry]
name = "wolt"
version = "0.1.0"
description = "API service to manage opening hours for restaurant"
authors = ["Tony Benoy <me@tonybenoy.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
gunicorn = "^20.1.0"
uvicorn = "^0.17.5"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.931"
isort = "^5.10.1"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
requests = "^2.27.1"
pytest-cov = "^3.0.0"
pytest-mypy = "^0.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
target-version = ['py36', 'py37', 'py38']

[tool.isort]
profile = "hug"
src_paths = ["src", "test"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = " --mypy --cov"
testpaths = [
    "src/tests",
]

[tool.coverage.run]
source = ['src']
